<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tViewTitle"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/universal_space_20"
                    android:src="@drawable/selfhealicon">

                </ImageView>

                <TextView
                    android:id="@+id/tViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/title"
                    android:fontFamily="@font/robotoblack"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_21sp"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tViewPBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/powered_by"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_10sp"></TextView>

                <TextView
                    android:id="@+id/tViewCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tViewPBy"
                    android:layout_centerHorizontal="true"
                    android:text="@string/company_name"
                    android:fontFamily="@font/robotoblack"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_21sp"></TextView>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</layout>