<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.cm.selfheal.viewmodel.RegistrationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/universal_space_16"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tViewTitle"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/universal_space_16"
                    android:src="@drawable/selfhealicon">

                </ImageView>

                <TextView
                    android:id="@+id/tViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/robotoblack"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_21sp"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/universal_space_16"
                    app:cardCornerRadius="@dimen/universal_space_2"
                    app:cardElevation="@dimen/universal_space_2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tTLEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/universal_space_5"
                            android:layout_marginEnd="@dimen/universal_space_5">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/eTextEmailAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/robotoregular"
                                android:hint="@string/email"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={viewModel.emailAddress}"
                                android:textColor="@color/primary_text_color"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tTLPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/universal_space_5"
                            android:layout_marginTop="@dimen/universal_space_8"
                            android:layout_marginEnd="@dimen/universal_space_5">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/eTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/universal_space_8"
                                android:layout_marginBottom="@dimen/universal_space_8"
                                android:fontFamily="@font/robotoregular"
                                android:hint="@string/password"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={viewModel.password}"
                                android:textColor="@color/primary_text_color"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/btnSignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/universal_space_8"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/robotobold"
                            android:onClick="btnSignInClick"
                            android:paddingLeft="@dimen/universal_space_4"
                            android:paddingRight="@dimen/universal_space_4"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                        <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</layout>